--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous" />
     <!-- fontawesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
+
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet/less" type="text/css" href="css/style.less" />
@@ -306,12 +308,36 @@
     </section>
     <section class="feedback">
         <div class="container">
-            <h3>See What They Said About Us</h3>
-            <img src="./img/avatar-feedback.png" alt="">
-            <p class="content-feedback">“Good services. I bought a bicycle with a wrong but they accepted free return for me and exchange a new product for me.</p>
-            <p class="author">Lina</p>
-            <p>Happy clients</p>
-            <p class="point">...</p>
+            <div class="slide-feedback">
+                <div class="feedback-inner">
+                    <h3>See What They Said About Us</h3>
+                    <img src="./img/avatar-feedback.png" alt="">
+                    <p class="content-feedback">“Good services. I bought a bicycle with a wrong but they accepted free return for me and exchange a new product for me.</p>
+                    <p class="author">Lina</p>
+                    <p>Happy clients</p>
+                </div>
+                <div class="feedback-inner">
+                    <h3>See What They Said About Us</h3>
+                    <img src="./img/avatar-feedback.png" alt="">
+                    <p class="content-feedback">“Good services. I bought a bicycle with a wrong but they accepted free return for me and exchange a new product for me.</p>
+                    <p class="author">Lina</p>
+                    <p>Happy clients</p>
+                </div>
+                <div class="feedback-inner">
+                    <h3>See What They Said About Us</h3>
+                    <img src="./img/avatar-feedback.png" alt="">
+                    <p class="content-feedback">“Good services. I bought a bicycle with a wrong but they accepted free return for me and exchange a new product for me.</p>
+                    <p class="author">Lina</p>
+                    <p>Happy clients</p>
+                </div>
+                <div class="feedback-inner">
+                    <h3>See What They Said About Us</h3>
+                    <img src="./img/avatar-feedback.png" alt="">
+                    <p class="content-feedback">“Good services. I bought a bicycle with a wrong but they accepted free return for me and exchange a new product for me.</p>
+                    <p class="author">Lina</p>
+                    <p>Happy clients</p>
+                </div>
+            </div>
         </div>
     </section>
     <section class="intro-partner">
@@ -447,15 +473,17 @@
             <p>Copyright © 2019 Gymax - Design by ArrowHitech - All Rights Reserved</p>
         </div>
     </section>
+    <!-- jQuery CDN -->
+    <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script>
-        function myFunction() {
-            var x = document.getElementById("menu");
-            if (x.className === "menu") {
-                x.className += " responsive";
-            } else {
-                x.className = "menu";
-            }
-        }
+        $(document).ready(function() {
+            $('.slide-feedback').slick({
+                arrows: false,
+                dots: true,
+            });
+        })
     </script>
 </body>
 
