--- a/index.html
+++ b/index.html
@@ -108,6 +108,12 @@
                             <li>
                                 <a href="#">Contacts</a>
                             </li>
+                            <li>
+                                <a href="#"><i class="fas fa-search"></i></a>
+                            </li>
+                            <li>
+                                <a href="#"><i class="far fa-user"></i></a>
+                            </li>
                         </ul>
                     </div>
 
@@ -117,16 +123,11 @@
 
                     <div class="search-item">
                         <ul>
-                            <li>
-                                <a href="#"><i class="fas fa-search"></i></a>
-                            </li>
+
                             <li>
                                 <a href="#"><i class="fas fa-shopping-bag"></i></a>
                             </li>
 
-                            <li>
-                                <a href="#"><i class="far fa-user"></i></a>
-                            </li>
                         </ul>
                     </div>
                 </div>
@@ -149,7 +150,7 @@
         <div class="container">
             <div class="swot-inner">
                 <div class="item">
-                    <img src="./img/item1.jpg" alt="">
+                    <img src="./img/swot1.png" alt="">
                 </div>
                 <div class="item">
                     <img src="./img/swot1.jpg" alt="">
@@ -157,7 +158,7 @@
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                 </div>
                 <div class="item">
-                    <img src="./img/item3.jpg" alt="">
+                    <img src="./img/swot2.png" alt="">
                 </div>
                 <div class="item">
                     <img src="./img/swot2.jpg" alt="">
@@ -165,7 +166,7 @@
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                 </div>
                 <div class="item">
-                    <img src="./img/item2.jpg" alt="">
+                    <img src="./img/swot3.png" alt="">
                 </div>
                 <div class="item">
                     <img src="./img/swot3.jpg" alt="">
@@ -199,7 +200,7 @@
                 <div class="item">
                     <div class="item-wrapper">
                         <div class="item-wrapper-inner">
-                            <img src="./img/product1.jpg" alt="">
+                            <img src="./img/product1.png" alt="">
                             <p>Body Champ Cardio</p>
                             <h6>$342.00</h6>
                         </div>
@@ -212,7 +213,7 @@
                     </div>
                     <div class="item-wrapper">
                         <div class="item-wrapper-inner">
-                            <img src="./img/product2.jpg" alt="">
+                            <img src="./img/product2.png" alt="">
                             <p>Body Solid GCEC340</p>
                             <h6>$214.00</h6>
                         </div>
@@ -225,7 +226,7 @@
                     </div>
                     <div class="item-wrapper">
                         <div class="item-wrapper-inner">
-                            <img src="./img/product3.jpg" alt="">
+                            <img src="./img/product3.png" alt="">
                             <p>Body Solid GCEC340</p>
                             <h6>$214.00</h6>
                         </div>
@@ -238,7 +239,7 @@
                     </div>
                     <div class="item-wrapper">
                         <div class="item-wrapper-inner">
-                            <img src="./img/product4.jpg" alt="">
+                            <img src="./img/product4.png" alt="">
                             <p>Body Solid GCEC340</p>
                             <h6>$214.00</h6>
                         </div>
@@ -251,7 +252,7 @@
                     </div>
                     <div class="item-wrapper">
                         <div class="item-wrapper-inner">
-                            <img src="./img/product5.jpg" alt="">
+                            <img src="./img/product5.png" alt="">
                             <p>Body Solid GCEC340</p>
                             <h6>$214.00</h6>
                         </div>
@@ -264,7 +265,7 @@
                     </div>
                     <div class="item-wrapper">
                         <div class="item-wrapper-inner">
-                            <img src="./img/product6.jpg" alt="">
+                            <img src="./img/product6.png" alt="">
                             <p>Body Solid GCEC340</p>
                             <h6>$214.00</h6>
                         </div>
@@ -277,7 +278,7 @@
                     </div>
                     <div class="item-wrapper">
                         <div class="item-wrapper-inner">
-                            <img src="./img/product7.jpg" alt="">
+                            <img src="./img/product7.png" alt="">
                             <p>Body Solid GCEC340</p>
                             <h6>$214.00</h6>
                         </div>
@@ -290,7 +291,7 @@
                     </div>
                     <div class="item-wrapper">
                         <div class="item-wrapper-inner">
-                            <img src="./img/product8.jpg" alt="">
+                            <img src="./img/product8.png" alt="">
                             <p>Body Solid GCEC340</p>
                             <h6>$214.00</h6>
                         </div>
@@ -383,31 +384,39 @@
             <div class="footer-info-company">
                 <div class="item">
                     <h4>Contact us</h4>
+
                     <div class="item-inner">
                         <div>
                             <a href="#"><i class="fas fa-map-marker-alt"></i></a>
                         </div>
-                        <p> 200 Lincoln Ave, Salinas, CA 93901</p>
-
+                        <p>
+                            <a href="#"> 200 Lincoln Ave, Salinas, CA 93901</a>
+                        </p>
                     </div>
                     <div class="item-inner">
                         <div>
                             <a href="#"><i class="fas fa-phone"></i></a>
                         </div>
-                        <p>023 32423 223</p>
+                        <p>
+                            <a href="#">023 32423 223</a>
+                        </p>
                     </div>
                     <div class="item-inner">
                         <div>
                             <a href="#"><i class="fas fa-envelope"></i></a>
                         </div>
-                        <p>gymax@example.com</p>
+                        <p>
+                            <a href="#">gymax@example.com</a>
+                        </p>
 
                     </div>
                     <div class="item-inner">
                         <div>
                             <a href="#"><i class="fas fa-clock"></i></a>
                         </div>
-                        <p>9:00 - 20:00 All day</p>
+                        <p>
+                            <a href="#">9:00 - 20:00 All day</a>
+                        </p>
 
                     </div>
                 </div>
@@ -415,18 +424,26 @@
                 <div class="item">
                     <h4>My Account</h4>
                     <div class="item-inner">
-                        <p>My account</p>
+                        <p>
+                            <a href="#">My account</a>
+                        </p>
 
                     </div>
                     <div class="item-inner">
-                        <p>check out</p>
+                        <p>
+                            <a href="#">check out</a>
+                        </p>
                     </div>
                     <div class="item-inner">
-                        <p>gymax@register</p>
+                        <p>
+                            <a href="#">gymax@register</a>
+                        </p>
 
                     </div>
                     <div class="item-inner">
-                        <p>Login</p>
+                        <p>
+                            <a href="#">Login</a>
+                        </p>
 
                     </div>
                 </div>
@@ -435,35 +452,49 @@
                     <h4>Information</h4>
 
                     <div class="item-inner">
-                        <p>About us</p>
+                        <p><a href="#">About us</a></p>
                     </div>
                     <div class="item-inner">
-                        <p> About us</p>
+                        <p>
+                            <a href="#">About us</a>
+                        </p>
                     </div>
                     <div class="item-inner">
-                        <p>Terms of user</p>
+                        <p>
+                            <a href="#">Terms of user</a>
+                        </p>
                     </div>
                     <div class="item-inner">
 
-                        <p>Privacy Policy</p>
+                        <p>
+                            <a href="#">Privacy Policy</a>
+                        </p>
                     </div>
                 </div>
 
                 <div class="item">
                     <h4>Quick link</h4>
                     <div class="item-inner">
-                        <p>New user</p>
+                        <p>
+                            <a href="#">New user</a>
+                        </p>
 
                     </div>
                     <div class="item-inner">
-                        <p>Help center</p>
+                        <p>
+                            <a href="#">Help center</a>
+                        </p>
                     </div>
                     <div class="item-inner">
-                        <p>Report spam</p>
+                        <p>
+                            <a href="#">Report spam</a>
+                        </p>
 
                     </div>
                     <div class="item-inner">
-                        <p>FAQs</p>
+                        <p>
+                            <a href="#">FAQs</a>
+                        </p>
 
                     </div>
                 </div>
